--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Class-Accessor-Class
-version:      0.10
+version:      0.12
 version_from: lib/Class/Accessor/Class.pm
 installdirs:  site
 requires:
+    Class::Accessor:               0.16
     Test::More:                    0
 
 distribution_type: module
